# leakagelib

./: .gitignore  __init__.py  changelog.md  flag_background.py  license.md  pyproject.toml  readme.md  requirements.txt
data/: .gitignore
data/bkg-nn/: model1-None.h5  model1-None.keras
data/bkg-spec/: nn_bkg_spectrum.npy  readme.md
data/effective-area/: ixpe-eff-area.csv
data/modulation/: mom.npy  nn-mom-energies.npy  nn.npy
data/rmf/: .gitignore  ehats.npy  es.npy  rmf.npy
data/sigma-tot/: sigma-tot.npy  simulation-bins.npy  simulation-energies.npy  simulation-hists.npy
docs/: background_estimation.rst  chandra_image.rst  conf.py  faq.rst  fitting.rst  index.rst  installation.rst  leakage_prediction.rst  leakagelib.ps_fit.rst  leakagelib.rst  leakagelib_bkg.rst  leakagelib_cxo.rst
docs/examples/: extended-source-fit.ipynb  fit-extended-real.ipynb  fit-extended.ipynb  fit-mcmc.ipynb  fit-nn.ipynb  fit-point-source-real-particle-weights.ipynb  fit-point-source-real.ipynb  fit-point-source.ipynb  fit-prepare-extended.ipynb  fit-prepare-point-source.ipynb  fit-time-varying.ipynb  leakage-compare.ipynb  leakage-extract.ipynb  leakage-predict.ipynb  leakage-severity.ipynb  leakagelib_cxo.ipynb  mcmc-fit.ipynb  point-source-fit.ipynb  time-varying-fit.ipynb
examples/: extract.py  leakage-severity.py  point-source.py  predict.py  psf-fit.py  psf-region.reg  readme.md
examples/data/: mock_is.npy  mock_qs.npy  (+1 more)
src/: __init__.py  extended.py  funcs.py  ixpe_data.py  modulation.py  psf.py  region.py  settings.py  source.py  spectrum.py
tests/: test.py
(+68 files in other folders)
